    not a list, causing "can only concatenate list"
    TypeError when combined with other clauses.

  - Fixed incorrect usage of "," in over() clause
    being placed between the "partition" and "order by"
    clauses.  [ticket:2134]

  - Before/after attach events for PrimaryKeyConstraint
    now function, tests added for before/after events
    on all constraint types.  [ticket:2105]

- engine
  - The C extension is now enabled by default on CPython
    2.x with a fallback to pure python if it fails to
    compile.  [ticket:2129]

- schema
  - The 'useexisting' flag on Table has been superceded
    by a new pair of flags 'keep_existing' and 
    'extend_existing'.   'extend_existing' is equivalent
    to 'useexisting' - the existing Table is returned,
    and additional constructor elements are added.
    With 'keep_existing', the existing Table is returned,
    but additional constructor elements are not added -
    these elements are only applied when the Table
    is newly created.   [ticket:2109]

- types
  - REAL has been added to the core types.  Supported
    by Postgresql, SQL Server, MySQL, SQLite.  Note
    that the SQL Server and MySQL versions, which 
    add extra arguments, are also still available
    from those dialects.  [ticket:2081]

-event
  - Added @event.listens_for() decorator, given
    target + event name, applies the decorated 
    function as a listener.  [ticket:2106]

- pool
  - AssertionPool now stores the traceback indicating
    where the currently checked out connection was
    acquired; this traceback is reported within
    the assertion raised upon a second concurrent 
    checkout; courtesy Gunnlaugur Briem 
    [ticket:2103]

  - The "pool.manage" feature doesn't use pickle
    anymore to hash the arguments for each pool.

- sqlite
  - Fixed bug where reflection of foreign key
    created as "REFERENCES <tablename>" without
    col name would fail.  [ticket:2115]
    (also in 0.6.7)

- postgresql